2023-04-29  Luigi Scarso <luigi.scarso@gmail.com> 
    * LuaTeX 1.17.0

2023-04-28  Luigi Scarso <luigi.scarso@gmail.com> 
    * new option --no-socket, same as --nosocket

2023-04-27  Luigi Scarso <luigi.scarso@gmail.com> 
    * new option --socket to split socket and shell escape;
    * the mime library is always available  (Max Chernoff);
    * Fixed ChangeLog

2023-04-25  Luigi Scarso <luigi.scarso@gmail.com> 
    * socket library by default not enabled; 
       it is enabled with --shell-escape but not with --shell-restricted.
       The option ---nosocket remains unchanged.
       The two new functions os.socketgettime and os.socketsleep are 
       like socket.gettime and socket.sleep, but they are always available.
    * Luatex 1.17.0

2023-04-24  Luigi Scarso <luigi.scarso@gmail.com> 
    * static kpse.check_permissions in os.kpsepopen
    * Fixed date in ChangeLog

2023-04-23  Luigi Scarso <luigi.scarso@gmail.com> 
    * new os.kpsepopen -- replace  io.popen if kpse is active.
    * Luatex 1.16.2

2023-04-18  Luigi Scarso <luigi.scarso@gmail.com> 
    * lua.setluaname(n, s) and lua.getluaname(n): 
      fixed mismatch between documentation and implementation (J. Friedrich).

2023-03-30  Luigi Scarso <luigi.scarso@gmail.com> 
    * bugfix for setpdforigin()  (A. Matthias) 

2023-02-22  Luigi Scarso <luigi.scarso@gmail.com> 
    * fix latelua data reference (side effect of deferred late additions) (H.Hagen)

2023-02-18  Luigi Scarso <luigi.scarso@gmail.com> 
    * Fixed the "Invalid unicode ranges in CMap beginbfrange operator bug" as in pdfTeX (Hàn Thế Thành)

2023-02-18  Luigi Scarso <luigi.scarso@gmail.com> 
    * new "late special" feature by Phelype Oleinik,
      heavily adapted by H.Hagen.

2023-02-05  Luigi Scarso <luigi.scarso@gmail.com> 
    *  Fix typos (thanks to J. Friedrich) 

2023-01-24  Luigi Scarso <luigi.scarso@gmail.com> 
    *  fix for r2l multiline link etc rectangles (H.Hagen)

2023-01-17  Luigi Scarso <luigi.scarso@gmail.com> 