@@ -1,3 +1,9 @@
+2023-10-04  Karl Berry  <karl@freefriends.org>
+
+	* luaoutputdir.test: new test for Lua-level reading from a given
+	--output-directory.
+	* am/luatex.am (luatex_tests): add it, plus .log dependency.
+
 2023-04-29  Luigi Scarso <luigi.scarso@gmail.com> 
     * LuaTeX 1.17.0
 
